canary_demo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: demo-canary-svc
      stableService: demo-stable-svc
      trafficRouting:
        nginx:
          stableIngress: canary-demo-ing 
      steps:
      - setWeight: 5
      - pause: { duration: 60s }
      - analysis:
          templates:
            - templateName: canary-isd-analysis
          args:
            - name: canary-hash
              valueFrom:
                podTemplateHashValue: Latest
            - name: baseline-hash
              valueFrom:
                podTemplateHashValue: Stable
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus_io_path: '/mgmt/prometheus'
        prometheus_io_port: '8088'
      labels:
        app: canary-demo
    spec:
      containers:
      - name: canary-demo
        image: docker.io/opsmxdev/issuegen:v3.0.1
        ports:
        - name: http
          containerPort: 8088
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
