canary_demo/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-canary-svc
spec:
  ports:
  - port: 80
    targetPort: 8088
    protocol: TCP
  selector:
    app: canary-demo

---
apiVersion: v1
kind: Service
metadata:
  name: demo-stable-svc
spec:
  ports:
  - port: 80
    targetPort: 8088
    protocol: TCP
  selector:
    app: canary-demo
